added hover and transition effect in navlinks and fix some issues

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,10 @@ body{
     display: inline-block;
 }
 
+.group-hover > a:hover{
+    color: #FF9800;
+}
+
+.group-hover > .active:hover{
+    color: white;
+}
